<resources>
    <string name="app_name">EhViewer</string>
    <string name="site_e" translatable="false">e-hentai</string>
    <string name="site_ex" translatable="false">exhentai</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_black">Black Theme</string>
    <string name="doujinshi" translatable="false">DOUJINSHI</string>
    <string name="manga" translatable="false">MANGA</string>
    <string name="artist_cg" translatable="false">ARTIST CG</string>
    <string name="game_cg" translatable="false">GAME CG</string>
    <string name="western" translatable="false">WESTERN</string>
    <string name="non_h" translatable="false">NON-H</string>
    <string name="image_set" translatable="false">IMAGE SET</string>
    <string name="cosplay" translatable="false">COSPLAY</string>
    <string name="asian_porn" translatable="false">ASIAN PORN</string>
    <string name="misc" translatable="false">MISC</string>
    <string name="homepage">Homepage</string>
    <string name="subscription">Subscription</string>
    <string name="whats_hot">What\'s hot</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="stub" translatable="false">Stub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="recaptcha">Recaptcha (Not required)</string>
    <string name="recaptcha_none">Tap here</string>
    <string name="recaptcha_loading">Loading…</string>
    <string name="recaptcha_failure">Failed</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="sign_in_via_webview">Sign in via WebView</string>
    <string name="sign_in_via_cookies">Sign in via cookies</string>
    <string name="display_name_dialog_title">Enter Display Name</string>
    <string name="display_name">Display name</string>
    <string name="display_name_is_empty">Display name is empty</string>
    <string name="sign_in_first">Please sign in first</string>
    <string name="default_display_name">Little Hippo</string>
    <string name="cookie_explain">A cookie is a small piece of data stored in web browser. Google it if you don\'t know what it is or how to get it.\n\nPlease enter special cookies to sign in.</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="waring">Warning</string>
    <string name="wrong_cookie_warning">It seems that the cookies you entered are wrong. You\'d better check them.</string>
    <string name="i_will_check_it">I will check it</string>
    <string name="i_dont_think_so">I don\'t think so</string>
    <string name="found_cookies">Found cookies!</string>
    <string name="invalid_download_location">It seems download location is not available. Please set it in Settings.</string>
    <string name="cellular_network_warning">Connected to cellular networks</string>
    <string name="clipboard_gallery_url_snack_message">There is a gallery url in the clipboard</string>
    <string name="clipboard_gallery_url_snack_action">View</string>
    <string name="error_status_code_400" translatable="false">Bad Request</string>
    <string name="error_status_code_401" translatable="false">Unauthorized</string>
    <string name="error_status_code_402" translatable="false">Payment Required</string>
    <string name="error_status_code_403" translatable="false">Forbidden</string>
    <string name="error_status_code_404" translatable="false">Not Found</string>
    <string name="error_status_code_405" translatable="false">Method Not Allowed</string>
    <string name="error_status_code_406" translatable="false">Not Acceptable</string>
    <string name="error_status_code_407" translatable="false">Proxy Authentication Required</string>
    <string name="error_status_code_408" translatable="false">Request Timeout</string>
    <string name="error_status_code_409" translatable="false">Conflict</string>
    <string name="error_status_code_410" translatable="false">Gone</string>
    <string name="error_status_code_411" translatable="false">Length Required</string>
    <string name="error_status_code_412" translatable="false">Precondition Failed</string>
    <string name="error_status_code_413" translatable="false">Request Entity Too Large</string>
    <string name="error_status_code_414" translatable="false">Request-URI Too Long</string>
    <string name="error_status_code_415" translatable="false">Unsupported Media Type</string>
    <string name="error_status_code_416" translatable="false">Requested Range Not Satisfiable</string>
    <string name="error_status_code_417" translatable="false">Expectation Failed</string>
    <string name="error_status_code_500" translatable="false">Internal Server Error</string>
    <string name="error_status_code_501" translatable="false">Not Implemented</string>
    <string name="error_status_code_502" translatable="false">Bad Gateway</string>
    <string name="error_status_code_503" translatable="false">Service Unavailable</string>
    <string name="error_status_code_504" translatable="false">Gateway Timeout</string>
    <string name="error_status_code_505" translatable="false">HTTP Version Not Supported</string>
    <string name="error_bad_status_code">Bad status code: %d</string>
    <string name="error_timeout">Timeout</string>
    <string name="error_unknown_host">Unknown host</string>
    <string name="error_redirection">Too many redirections</string>
    <string name="error_socket">Network error</string>
    <string name="error_unknown">Weird</string>
    <string name="error_cant_find_activity">Can\'t find the application</string>
    <string name="error_cannot_parse_the_url">Can\'t parse the url</string>
    <string name="error_not_folder_path">Not folder path</string>
    <string name="error_no_provider">No provider</string>
    <string name="error_decoding_failed">Decoding failed</string>
    <string name="error_not_found">Not found</string>
    <string name="error_empty">Empty</string>
    <string name="error_invalid_archive">Invalid archive</string>
    <string name="error_reading_failed">Reading Failed</string>
    <string name="error_out_of_range">Out of range</string>
    <string name="error_write_failed">Write failed</string>
    <string name="error_parse_error">Parse error</string>
    <string name="error_509">509</string>
    <string name="error_invalid_url">Invalid url</string>
    <string name="error_get_ptoken_error">Get pToken error</string>
    <string name="error_cant_create_temp_file">Couldn\'t create temp file</string>
    <string name="error_cant_save_image">Can\'t save image</string>
    <string name="error_invalid_number">Invalid number</string>
    <string name="error_please_login_first">Please login first</string>
    <string name="error_empty_html">Empty page</string>
    <string name="error_cant_get_image">Can\'t get image</string>
    <string name="search_normal_search">Normal search</string>
    <string name="search_specify_uploader">Specify uploader</string>
    <string name="search_specify_tag">Specify tag</string>
    <string name="search_enable_advance">Enable advance options</string>
    <string name="search_sname">Search Gallery</string>
    <string name="search_stags">Search Gallery Tags</string>
    <string name="search_sdesc">Search Gallery Description</string>
    <string name="search_storr">Search Torrent Filenames</string>
    <string name="search_sto">Only Show Galleries With Torrents</string>
    <string name="search_sdt1">Search Low-Power Tags</string>
    <string name="search_sdt2">Search Downvoted Tags</string>
    <string name="search_sh">Show Expunged Galleries</string>
    <string name="search_sr">Minimum Rating:</string>
    <string name="settings_eh_sign_out">Sign out</string>
    <string name="settings_eh_sign_out_summary">Restart the application to sign in</string>
    <string name="settings_eh_identity_cookies">Identity cookies</string>
    <string name="settings_eh_identity_cookies_summary">Cookies can be used to sign in</string>
    <string name="settings_u_config">EHentai settings</string>
    <string name="settings_u_config_summary">Settings on EHentai website</string>
    <string name="settings_eh_theme">Theme</string>
    <string name="settings_eh_gallery_site">Gallery site</string>
    <string name="settings_eh_list_mode">List mode</string>
    <string name="settings_eh_detail_size">Detail size</string>
    <string name="settings_eh_thumb_size">Thumb size</string>
    <string name="settings_eh_thumb_resolution">Thumb resolution</string>
    <string name="settings_eh_thumb_resolution_summary">Currently %s. Certain resolutions might cause getting thumb failed</string>
    <string name="settings_eh_fix_thumb_url">Fix thumb url</string>
    <string name="settings_eh_show_jpn_title">Show Japanese title</string>
    <string name="settings_eh_show_gallery_pages">Show gallery pages</string>
    <string name="settings_eh_show_gallery_pages_summary">Display the number of pages in the gallery list</string>
    <string name="settings_eh_filter">Block gallery</string>
    <string name="settings_eh_filter_summary">Block gallery by title, uploader and tags</string>
    <string name="settings_eh_cellular_network_warning">Cellular network warning</string>
    <string name="settings_download_download_location">Download location</string>
    <string name="settings_download_multi_thread_download">Multi-threaded download</string>
    <string name="settings_download_multi_thread_download_summary">Up to %s images</string>
    <string name="settings_download_preload_image">Preload image</string>
    <string name="settings_download_preload_image_summary">Preload next %s image</string>
    <string name="settings_download_restore_download_items">Restore download items</string>
    <string name="settings_download_restore_download_items_summary">Restore all download items in download location</string>
    <string name="settings_advanced_save_parse_error_body">Save html content when parsing error</string>
    <string name="settings_advanced_save_parse_error_body_summary">Html content may be privacy-sensitive</string>
    <string name="settings_advanced_dump_logcat">Dump logcat</string>
    <string name="settings_advanced_dump_logcat_summary">Save logcat to external storage</string>
    <string name="settings_advanced_clear_download_path_cache">Clear download path cache</string>
    <string name="settings_advanced_clear_download_path_cache_summary">Gallery download path might be wrong and it need to be redownloaded. Clearing download path cache might solve the problem.</string>
    <string name="settings_advanced_clear_memory_cache">Clear memory cache</string>
    <string name="settings_advanced_clear_memory_cache_summary">Clear thumb, gallery info memory cache</string>
    <string name="settings_advanced_read_cache_size">Read cache size</string>
    <string name="settings_advanced_app_language_title">App language</string>
    <string name="settings_advanced_built_in_hosts_title">Built-in hosts.txt</string>
    <string name="settings_advanced_built_in_hosts_summary">Apply the built-in host-to-IP mapping provided by the app.\nIt can be overridden by custom hosts.txt.</string>
    <string name="settings_advanced_custom_hosts_title">Custom hosts.txt</string>
    <string name="settings_advanced_custom_hosts_summary">Map hostnames to IP addresses.\nIt can override built-in hosts.txt.</string>
    <string name="settings_advanced_export_data">Export data</string>
    <string name="settings_advanced_export_data_summary">Save data like download list, quick search list, to external storage</string>
    <string name="settings_advanced_import_data">Import data</string>
    <string name="settings_advanced_import_data_summary">Load data which were previously saved</string>
</resources>