<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/advance_search_table_item_margin"
            android:layout_marginRight="@dimen/advance_search_table_item_margin"
            android:checked="true"
            android:text="@string/search_sname"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/advance_search_table_item_margin"
            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
            android:checked="true"
            android:text="@string/search_stags"/>
    </TableRow>

    <TableRow>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/advance_search_table_item_margin"
            android:layout_marginBottom="@dimen/advance_search_table_item_margin"
            android:layout_marginRight="@dimen/advance_search_table_item_margin"
            android:text="@string/search_sdesc"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/advance_search_table_item_margin"
            android:layout_marginBottom="@dimen/advance_search_table_item_margin"
            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
            android:text="@string/search_storr"/>
    </TableRow>

    <TableRow>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/advance_search_table_item_margin"
            android:layout_marginBottom="@dimen/advance_search_table_item_margin"
            android:layout_marginRight="@dimen/advance_search_table_item_margin"
            android:text="@string/search_sto"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/advance_search_table_item_margin"
            android:layout_marginBottom="@dimen/advance_search_table_item_margin"
            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
            android:text="@string/search_sdt1"/>
    </TableRow>

    <TableRow>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/advance_search_table_item_margin"
            android:layout_marginBottom="@dimen/advance_search_table_item_margin"
            android:layout_marginRight="@dimen/advance_search_table_item_margin"
            android:text="@string/search_sdt2"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/advance_search_table_item_margin"
            android:layout_marginBottom="@dimen/advance_search_table_item_margin"
            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
            android:text="@string/search_sh"/>
    </TableRow>

    <TableRow>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/advance_search_table_item_margin"
            android:layout_marginRight="@dimen/advance_search_table_item_margin"
            android:text="@string/search_sr"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/advance_search_table_item_margin"
            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
            android:entries="@array/search_min_rating"/>
    </TableRow>

</merge>
